--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ ul{
 	right: 30px;
 	transform: rotateZ(-46deg);
 }
-/* Enroll */
+
 #enroll-section{
 	background-color: black;
 	margin-left: auto;
@@ -242,6 +242,7 @@ ul{
      right: auto;
      padding: 25px;
 }
+
 .carousel-caption h3{
 	font-size: 24px;
 }
@@ -309,24 +310,22 @@ ul{
 
 .footer-more-info{
 	padding:3% 0 2% 0;
-	margin:;
 	font-size: 12px;
 }
 
 
 .footer-contact{
-	padding-bottom: 5%;
-	padding-left: 50%;
 	font-size: 24px;
+	padding-top:2%;
 }
 
 .footer-contact-list{
-	padding-left: 45%;
+	padding:3% 0 2% 0;
 }
 
 .footer-contact-list span{
 	font-family: Arial, helvetica, Sans-Serif;
-	font-size: 20px;
+	font-size: 15px;
 }
 
 
